syntax = "proto3";

package autokitteh.mappings.v1;

import "autokitteh/mappings/v1/mapping.proto";
import "buf/validate/validate.proto";

message CreateRequest {
  option (buf.validate.message).cel = {
    id: "mapping.mapping_id_must_be_empty",
    message: "mapping_id must not be specified",
    expression: "has(this.mapping) && this.mapping.mapping_id == ''",
  };

  Mapping mapping = 1;
}

message CreateResponse {
  string mapping_id = 1 [(buf.validate.field).string.min_len = 1];
}

message DeleteRequest {
  string mapping_id = 1 [(buf.validate.field).string.min_len = 1];
}

message DeleteResponse {}

message GetRequest {
  string mapping_id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetResponse {
  Mapping mapping = 1;
}

message ListRequest {
  string env_id = 1;
  string connection_id = 2;
}

message ListResponse {
  repeated Mapping mappings = 1 [(buf.validate.field).repeated.items.required = true];
}

service MappingsService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc List(ListRequest) returns (ListResponse);
}
